--- a/css/styles.css
+++ b/css/styles.css
@@ -74,6 +74,9 @@ section {
 .navbar__menu li {
   display: inline-block;
 }
+.navbar__menu li a {
+  color: rgb(5, 5, 95);
+}
 
 .navbar__menu .menu__link {
   display: inline-block;
